# cha2slide

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  configure  configure.bat  meson.build
cmake/: UseLatexMk.cmake  latexmkrc.cmake
doc/: CMakeLists.txt  prototype.c  writeup.tex
src/: CMakeLists.txt  adler32.c  adler32.h  blake2b.c  blake2b.h  cha2slide.c  chacha20.c  chacha20.h  chunk.c  chunk.h  crc32.c  crc32.h  deflate.h  log.c  log.h  macro.c  macro.h  meson.build  test.c  test.h  test_blake2b.c  test_blake2b.h  test_chacha20.c  test_chacha20.h  test_chunk.c  test_chunk.h  test_crc32.c  test_crc32.h  testblake2b.c  testblake2b.h  testchacha20.c  testchacha20.h  testchunk.c  testchunk.h  testcrc32.c  testcrc32.h  zlib.h
subprojects/: munit.wrap
